# Recall

./: AGENTS.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  README.zh-CN.md
.agents/skills/recall-ext/: SKILL.md
.agents/skills/update-recall-homebrew-tap/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: extension-release.yml  release.yml
.superpowers/sdd/: task-4-report.md
docs/: extensions.md  reflect.md  session-cli-prd.md  session.md  share.md
docs/extensions/: reflect.md
extensions/: AGENTS.md
extensions/recall-probe/: Cargo.toml
extensions/recall-probe/src/: main.rs
extensions/recall-reflect/: Cargo.toml  README.md
skills/recall/: SKILL.md
skills/reflect/: SKILL.md
src/: bench.rs  cli.rs  config.rs  embedding.rs  export.rs  extension.rs  handoff.rs  import.rs  info.rs  lib.rs  main.rs  query.rs  reflect.rs  repo_identity.rs  semantic.rs  session.rs  session_action.rs  share.rs  share_init.rs  skill_audit.rs  sync.rs  transcript.rs  types.rs  usage.rs  utils.rs
src/adapters/: AGENTS.md  antigravity.rs  claude_code.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  events.rs  file_scan.rs  gemini.rs  grok.rs  json_util.rs  kiro.rs  mod.rs  opencode.rs  paths.rs  pi.rs  sync_state.rs  usage.rs
src/db/: AGENTS.md  event_store.rs  mod.rs  project_store.rs  schema.rs  search.rs  semantic_store.rs  session_store.rs  skill_audit_store.rs  store.rs  usage_store.rs
src/integration/: eval_harness.rs  mod.rs  regression.rs
src/share/: assets.rs  meta.rs  mod.rs  publish.rs  render.rs
src/tui/: AGENTS.md  app.rs  event.rs  layout.rs  mod.rs  runner.rs  search_state.rs  search_worker.rs  share_state.rs  text_layout.rs  ui.rs  usage_state.rs  viewing_state.rs
tests/: eval_harness.rs  regression.rs
website/: AGENTS.md
(+20 files in other folders)
