[package]
name = "recall"
version = "0.2.10"
edition = "2024"
license = "MIT"
description = "Unified search, usage tracking, and JSONL export for AI coding sessions"
repository = "https://github.com/samzong/Recall"
publish = false

[workspace]
members = [".", "extensions/recall-probe"]
default-members = ["."]
resolver = "2"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
hf-hub = { version = "0.5", features = ["ureq"] }
tokenizers = { version = "0.22", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
anyhow = "1"
kitup = "0.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
globset = "0.4"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
fs2 = "0.4"
pulldown-cmark = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.10", features = ["metal"] }
candle-nn = { version = "0.10", features = ["metal"] }
candle-transformers = { version = "0.10", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.release]
publish = false
verify = false
push-remote = "origin"
pre-release-commit-message = "chore(release): bump to v{{version}}"
tag-message = "v{{version}}"
tag-name = "v{{version}}"
